# canpi-ws

./: .gitignore  Cargo.toml  Makefile  README.md
config/: Makefile  canpi-ws.conf  canpi-ws.json  canpi-ws.service
package/: Makefile  canpi-ws.epm
scripts/: create_canpiws_cfg.py
src/: errors.rs  example.bash  lobby.rs  main.rs  messages.rs  routes.rs  validation.rs  ws.rs
src/handlers/: start_connection.rs
