[package]
name = "canpi-ws"
version = "0.1.0"
authors = ["Mark Thornber <mark.thornber@merg.org.uk"]
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
description = "A communications adapter to present a WebSocket interface for CBus"
repository = "https://github/emthornber/canpi-ws"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "canpi-ws"
path = "src/main.rs"

[dependencies]
thiserror = "1.0.63"
serde = { version = "1.0.203", features = ["derive"] }
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
actix = "0.13.3"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
lazy_static = "1.5.0"
dotenv = "0.15.0"
simple_logger = "5.0.0"
log = "0.4.22"
time = "0.3.36"
rust-ini = "0.21.0"
strfmt = "0.2.4"
